# Deep-ContourFlow

./: .gitignore  .gitmodules  CITATION.cff  Deep_active_contourV1.py  Deep_active_contourV2.py  LICENSE  README.md  analyze_score.ipynb  augmentation.py  background_dac.py  compute_scores.py  config.py  dac_distance_map.py  dcf.yml  delete_annotations.py  delete_loops.py  distance_map_dac.ipynb  extract_features.ipynb  extract_images_normalize.py  find_scores.py  get_annotations.py  glcm.yaml  pyproject.toml  requirements.txt  unsupervised_dac.ipynb  unsupervised_dac.py  utils.py
.github/workflows/: ci.yml
algorithms/: background_dcf.py  dcf_distance_map.py  oneshot_dcf.py  unsupervised_dcf.py  utils.py  utils_dilated_tubules.py
annotations/: annotations.csv
deep_contourflow/: __init__.py  features.py  oneshot.py  postprocessing.py  unsupervised.py  visualization.py
deep_contourflow/models/: __init__.py  models.py  models_architectures.py
example/: distance_map_dcf.ipynb  oneshot_dcf.ipynb  unsupervised_dcf.ipynb
generate_annotations/: annotations.csv  delete_annotations.py  extract_images.py  extract_images_normalize.py  get_annotations.py
models/: models.py
notebooks/: oneshot_dcf.ipynb  unsupervised_dcf.ipynb
scores/: analyze_score.ipynb  compute_scores.py  nohup.out  scores.csv
scripts/: make_evolution_gif.py  make_social_preview.py
